fix sidebar overlap

--- a/content/style/blog.sass
+++ b/content/style/blog.sass
@@ -253,7 +253,7 @@ ul.articles
       width: 100%
 
 
-@media screen and (max-width: $width-body+300px) and (min-device-aspect-ratio: 100/99)
+@media screen and (max-width: $width-body+600px) and (min-device-aspect-ratio: 100/99)
   #logo img
     height: 50px
   #nav-container
@@ -303,3 +303,30 @@ ul.articles
     margin-right: 20px
   pre.hljs
     font-size: 30px
+
+
+
+.todo
+  padding: 10px
+  background: #bbf
+
+.todo:before
+  content: "TODO: "
+  font-weight: bold
+
+#main-container a
+  color: black
+  text-decoration: underline
+
+/* #main-container a
+/*   color: black
+/*   text-decoration: none
+/*   border-bottom: 2px solid #aaa
+
+/* #main-container a:hover
+/*   color: black
+/*   text-decoration: none
+/*   border-bottom: 2px solid #222
+
+/* #main-container .share-buttons a, #main-container .signature a
+/*   border-bottom: 0px
